Add tree-sitter and lsp-bridge - and remove other packages
Signed-off-by: Mingde (Matthew) Zeng <matthewzmd@posteo.net>

--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "site-elisp/indent-bars"]
 	path = site-elisp/indent-bars
 	url = https://github.com/jdtsmith/indent-bars.git
+[submodule "site-elisp/lsp-bridge"]
+	path = site-elisp/lsp-bridge
+	url = https://github.com/manateelazycat/lsp-bridge.git
